force-app/main/default/objects/Order_Product_Shipment__c/Order_Product_Shipment__c.object-meta.xml
<CustomObject>
    <description>This is the junction object for &quot;OrderItem&quot; and &quot;Shipment&quot;</description>
    <label>Order Product Shipment</label>
    <nameField>
        <displayFormat>OPS-{00000000}</displayFormat>
        <label>Order Product Shipment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Product Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>