force-app/main/default/objects/Order_Product_Shipment__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Product Shipments</relationshipLabel>
    <relationshipName>Order_Product_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>