force-app/main/default/objects/Order_Product_Shipment__c/fields/Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Quantity__c</fullName>
    <description>Quantity of Order Product shipped</description>
    <formula>Shipment__r.Shipped_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>