force-app/main/default/objects/Order_Product_Shipment__c/fields/Shippment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shippment_Status__c</fullName>
    <description>The status of the Shipment for the order product.</description>
    <formula>Shipment__r.Status__c</formula>
    <label>Shippment Status</label>
    <type>Text</type>
</CustomField>